BE conti pipeline overhaul: videoId mapping, validation, hygiene (#2)
* chore: tighten CORS, add @Valid input checks, expand HikariCP pool, unify logging

- Drop https://*.vercel.app and https://*.contied.cloud wildcard origins; allow extra origins via CORS_EXTRA_ORIGINS env
- Annotate Post* request DTOs with @NotNull/@NotBlank/@Size/@Pattern; add @Valid on ContiController @RequestBody params; surface MethodArgumentNotValidException as 400 with field-level Korean message
- HikariCP minimum-idle 1->2, maximum-pool-size 2->10 to unblock concurrent AI calls (120s blocking)
- Replace System.err.println with @Slf4j log.warn/error in JwtAuthenticationFilter and YoutubeService
- Pass through optional seed field on PostContiByAiRequest to the AI server payload for "regenerate" flow

* refactor: surface AI Mono boundary, harden JWT, add cursor paging and search UPSERT

- GenerativeAiService now returns Mono<AiResponse> with timeout/log via doOnSuccess/doOnError; ContiService blocks once with explicit Duration.ofSeconds(125) and rejects empty responses
- JwtTokenProvider allows 60s clock skew, requires exp claim, splits ExpiredJwtException vs other failures with @Slf4j logging
- SongRepository adds findByStateWithCursor / findByTitleContainingWithCursor; SongService.searchSongs(title, cursor, take) clamps take to 1..200; SongController forwards cursor and take
- SearchHistoryEntity declares uk_search_user_query unique constraint (TODO note for prod migration SQL); SearchHistoryRepository adds native ON CONFLICT UPSERT; SearchHistoryService.saveSearch replaces ifPresentOrElse with single upsertSearch call